add duplicate items, changed design, complete items

--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://kristijanjovanovski.com/project/ReactToDo/"
+  "homepage": ""
 }
