--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,5 +30,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": ""
+  "homepage": "https://kristijanj.github.io/react-todo-app/",
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  }
 }
